# HORM

./: README.md  _alphanet_module.py  _ft.py  alphanet_module.py  equiformer_v2.yml  eval.py  ff_lmdb.py  ft.py  pyproject.toml  requirements.txt  train.py  training_module.py  utils.py
alphanet/: _version.py  alphanet_module.py  calculator.py  config.py  data.py  ff_lmdb.py  mul_trainer.py
alphanet.egg-info/: PKG-INFO  SOURCES.txt
alphanet/infer/: calc.py
alphanet/models/: alphanet.py
data/: sample_100.lmdb
leftnet/: potential.py
leftnet/model/: leftnet.py
leftnet/utils/: sampling_tools.py
nets/equiformer_v2/: equiformer_v2_oc20.py
scripts/: dp2pic_batch.py  pl2ckpt.py  xyz2pic.py
scripts/t1_perov/data/000/: type.raw
scripts/t1_perov/data/000/set.000/: box.npy  coord.npy  energy.npy  force.npy  virial.npy
scripts/t1_perov/data/000/set.001/: box.npy  coord.npy  energy.npy  force.npy  virial.npy
scripts/t1_perov/data/000/set.002/: box.npy  coord.npy  energy.npy  force.npy  virial.npy
scripts/t1_perov/data/001/: type.raw  type_map.raw
scripts/t1_perov/data/002/: type.raw
scripts/t1_perov/data/003/: type.raw
wandb/: latest-run
wandb/run-20250512_053652-nv2wcjm6/: run-nv2wcjm6.wandb
wandb/run-20250512_053652-nv2wcjm6/files/: config.yaml  wandb-metadata.json
wandb/run-20250512_054007-dkj45el0/: run-dkj45el0.wandb
wandb/run-20250512_054007-dkj45el0/files/: config.yaml  wandb-metadata.json
wandb/run-20250512_054052-qj1rf5ha/files/: wandb-metadata.json
wandb/run-20250512_055452-lohk0tho/files/: requirements.txt  wandb-metadata.json
(+31 files in other folders)
